# ColabMDA

./: .gitignore  COLABMDAnalysis.ipynb  ColabMDA.ipynb  LICENSE  README.md  README_old.md  RELEASE.md  colabgmx-230710.md  drafts.md  g  md_simulation_230717.ipynb  mdtraj-analysis.ipynb  pyproject.toml  setup_colabgmx_inprogress_250714.py
.github/workflows/: python-publish.yml
_mdps/: md.mdp  nvt.mdp
analysis/: 01-energies.py  02-fundamental.py  03-essential.py
analysis/01-energies/: 02-temperature.py
demo_analysis/: 01-rmsd-single.py  02-rmsf-single.py  03-rg-single.py  04-rmsd-double.py  06-rg-double.py
envs/: install_miniforge.sh  install_modeller_env.sh  install_openmm_env.sh
images/: flowchart-md.xml
mdp/: md.mdp  npt.mdp  nvt.mdp
mdps/: ions.mdp  md.mdp  minim.mdp  npt.mdp  nvt.mdp
mdps_100ns/: em.mdp  ions.mdp  md.mdp  npt.mdp  nvt.mdp
modeller/: README.MD  install_modeller.sh  modeller_analysis.py  readme_modeller.md  truncate_model.py
notebooks/: 01-simulaiton-engelberger.ipynb  02-colabmd-simulation.ipynb  04-colab-gmx-install.ipynb  04.1_colab_gmx_install.ipynb  05-colabmd-simulation-2024.ipynb  06-colabmd-analysis-2024.ipynb  250417_modeller.ipynb  colab_gmx_install+simu+concat_240112.ipynb  colab_gmx_install_mds_240112.ipynb  colab_gmx_install_simu_concat_240112.ipynb  colab_md_simulaiton.ipynb
openmm/: 00_installation.md  02_analysis.py  02_analyze_trajectory.py  README.md  openmm_full.py  openmm_full_1.py  openmm_full_2.py
python/: main.py
scripts/: aggregate_analysis.py  bootstrap_colab_openmm_gpu.sh  install_colabmda_release.sh
(+57 files in other folders)
