[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colabmda"
version = "0.1.0"
description = "Colab-friendly modelling + MD workflows (Modeller + OpenMM)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Shamrat Kumar Paul"}]

dependencies = [
  "numpy",
  "matplotlib",
  "biopython",
]

[project.scripts]
colabmda = "colabmda.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
